headlamp/deployment-headlamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
        app.kubernetes.io/name: headlamp
        app.kubernetes.io/instance: headlamp
    spec:
      priorityClassName: homelab-standard
      enableServiceLinks: false
      serviceAccountName: headlamp
      securityContext:
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: headlamp
          image: harbor.andreybondarenko.com/github/headlamp-k8s/headlamp:v0.45.0
          imagePullPolicy: IfNotPresent
          args:
            - -in-cluster
            - -in-cluster-context-name=home-k8s
            - -plugins-dir=/headlamp/plugins
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 100
            runAsGroup: 101
          ports:
            - name: http
              containerPort: 4466
            - name: metrics
              containerPort: 9090
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 80Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
