headlamp/cilium-network-policy-headlamp-allow-egress-kubernetes-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: headlamp-allow-egress-kubernetes-api
  namespace: headlamp
spec:
  endpointSelector:
    matchLabels:
      app: headlamp
  egress:
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            serviceName: kubernetes
            namespace: default
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
